<resources>
    <string name="app_name" translatable="false">Text Extractor</string>
    <string name="log_in">Log in</string>
    <string name="camera_image">Camera Image</string>
    <string name="capture_image">Capture Image</string>
    <string name="select_image">Select Image</string>
    <string name="result_text">Scanned Text:</string>
    <string name="copy_text">Copy Text</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_button">Log In</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="save_text">Save Text</string>
    <string name="app_icon">App Icon</string>
    <string name="close">Close</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="welcome">Welcome</string>
    <string name="google_button">Log in with Google</string>
    <string name="return_back">Return back</string>
    <string name="copy_toast">Text copied</string>
    <string name="save_toast">Text saved</string>
    <string name="delete_toast">Text deleted</string>
    <string name="home">Home</string>
    <string name="confirm_delete_title">Are you sure to delete?</string>
    <string name="confirm_delete_message">You won\'t be able to revert this change once it is done!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="question_1">1. How do I take a picture?</string>
    <string name="answer_1">In order to take a picture, you have to click on \'Capture Image\' and give camera permissions</string>
    <string name="question_2">2. Can I select a picture from my gallery?</string>
    <string name="answer_2">Yes, you can do it by clicking on \'Select Image\'.</string>
    <string name="question_3">3. How can I scan the text from an image?</string>
    <string name="answer_3">You can scan the text from an image by clicking on the camera icon and selecting an image from the gallery or by taking a picture.</string>
    <string name="question_4">4. How can I copy the scanned text?</string>
    <string name="answer_4">You can copy to the clipboard the scanned text by clicking on the \'Copy Text\' button.</string>
    <string name="question_5">5. Can I save the scanned text for later?</string>
    <string name="answer_5">You can save the scanned text by clicking on the \'Save Text\' button and view it in the history section.</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="language">Language</string>
    <string name="limit_toast">You have reached the limit of saved texts. Please delete one in order to save a new text.</string>
</resources>