<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"> <!-- Color de fondo oscuro -->

    <!-- Botón de retroceso -->
    <Button
        android:id="@+id/closeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:gravity="center"
        android:drawableStart="@drawable/baseline_close_24"
        android:tint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Contenedor principal -->
    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/login_icon" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/log_in_to_continue"
            android:textColor="#D0D0D0"
            android:textSize="14sp" />

        <!-- Campo de correo -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#A0A0A0" />

        <!-- Campo de contraseña -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#A0A0A0" />

        <!-- Botones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#F07B3F"
                android:fontFamily="sans-serif-medium"
                android:text="@string/log_in_button"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Botón de Google -->
        <Button
            android:id="@+id/googleButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif-medium"
            android:drawableStart="@drawable/google"
            android:text="@string/google_button"
            android:textColor="#000000" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
